--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -1,3 +1,21 @@
+
+.border-none{
+	border: none;
+}
+
+
+.btn-light:hover, .btn-light:active{
+	background: var(--black);
+	color: var(--white);
+}
+.btn-light:hover a, .btn-light:active a{
+	color: var(--white);
+}
+
+a:hover, a:active{
+	color: var(--white);
+}
+
 #feed{
   max-width: 1410px;
 }
@@ -10,6 +28,7 @@
 display:inline-block;
   box-sizing: border-box;
   width: 330px;
+  max-width: 380px;
   margin-bottom: 12px;
   overflow: hidden;
 }
@@ -100,11 +119,13 @@ display:inline-block;
 }
 
 .feed-write-btn{
-	top: 80px;
 	margin-right: 10px;
+}
+
+.feed-btn{
+	top: 80px;
 	width: 50px;
 	height: 50px;
-	
 	background: rgba( 255, 255, 255, 0.65 );
 	box-shadow: 0 8px 32px 0 rgba( 200, 200, 200, 0.37 );
 	backdrop-filter: blur( 17.5px );
