--- a/src/main/resources/templates/thymeleaf/map/map_0221.html
+++ b/src/main/resources/templates/thymeleaf/map/map_0221.html
@@ -96,16 +96,41 @@
 
 <div th:replace="~{footer/footer::footer}"></div>
     <script>
+ // 마커를 담을 배열입니다
+    var markers = [];
+    let presentPosition;
+    
+    
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
             mapOption = { 
-                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                level: 3 // 지도의 확대 레벨
+	        	center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
+	            level: 5 // 지도의 확대 레벨
             };
         
         // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
         var map = new kakao.maps.Map(mapContainer, mapOption); 
         
-        
+     // HTML5의 geolocation으로 사용할 수 있는지 확인합니다 
+        if (navigator.geolocation) {
+            
+            // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+            navigator.geolocation.getCurrentPosition(function(position) {
+                
+                var lat = position.coords.latitude, // 위도
+                    lon = position.coords.longitude; // 경도
+                
+                var locPosition = new kakao.maps.LatLng(lat, lon) // geolocation으로 얻어온 좌표
+                presentPosition=locPosition;
+         
+                map.setCenter(locPosition);   
+                    
+              });
+            
+        } else { // HTML5의 GeoLocation을 사용할 수 없을때 
+            
+            var locPosition = new kakao.maps.LatLng(37.566826, 126.9786567)
+            alert('현재 위치를 찾을 수 없습니다!');
+        }
         // 
         
     </script>
