--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -140,6 +140,11 @@ display:inline-block;
 	width: 330px;
 } */
 
+.h-300{
+	height: 300px;	
+}
+
+ 
 /* feed thumbnail Btn */
 .feed-fileUpload{
 	position: absolute;
