--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -268,35 +268,12 @@
   	margin-bottom: 60px;
   }
 
-  div.hp_img {
+  img.hp_img {
   	width: 100%;
   	height: 100%;
   }
 
-  div.hp_img_content:nth-child(1)>div.hp_img {
-  	background-image: url('../img/home/content/해솔라이CC.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-
-  }
-
-  div.hp_img_content:nth-child(2)>div.hp_img {
-  	background-image: url('../img/home/content/생거진천 자연휴양림.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-  }
-
-  div.hp_img_content:nth-child(3)>div.hp_img {
-  	background-image: url('../img/home/content/강원도 탄광문화촌.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-  }
-
-  div.hp_img_content:nth-child(4)>div.hp_img {
-  	background-image: url('../img/home/content/화엄사.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-  }
+  
 
   /*핫플콕콕 이미지 박스 안 텍스트 title 스타일*/
   div.hp_title {
@@ -342,29 +319,12 @@
   }
 
   ul.aiPlaner_list>li div.aiPlaner_img,
-  #myCarousel .f-carousel__slide>li div.aiPlaner_img {
+  #myCarousel .f-carousel__slide>li .aiPlaner_img {
   	width: 100%;
   	height: 214px;
+  	margin: 0 auto;
   }
 
-  ul.aiPlaner_list>li:nth-child(1) div.aiPlaner_img,
-  #myCarousel .f-carousel__slide:nth-child(1)>li div.aiPlaner_img {
-  	background-image: url("../img/home/content/전주김제 2박3일 여행.jpg");
-  	background-size: cover;
-  }
-
-  ul.aiPlaner_list>li:nth-child(2) div.aiPlaner_img,
-  #myCarousel .f-carousel__slide:nth-child(2)>li div.aiPlaner_img {
-  	background-image: url("../img/home/content/제주도 여행코스.jpg");
-  	background-size: cover;
-  }
-
-  ul.aiPlaner_list>li:nth-child(3) div.aiPlaner_img,
-  #myCarousel .f-carousel__slide:nth-child(3)>li div.aiPlaner_img {
-  	background-image: url("../img/home/content/부산 여행코스.jpg");
-  	background-size: cover;
-  	background-position: center;
-  }
 
   #myCarousel {
   	--f-carousel-spacing: 10px;
@@ -392,7 +352,7 @@
   	background: #fcf3eb;
   	z-index: 10;
   	height: 30px;
-  	width: 70px;
+  	width: 100px;
   	line-height: 30px;
   	text-align: center;
   	font-size: 15px;
@@ -654,7 +614,7 @@ div.home_band_recomand_text>span{
   		--f-carousel-slide-width: 80%;
   	}
 
-  	div.hp_imgBox {
+  	img.hp_imgBox {
   		flex-direction: column;
   		justify-content: center;
   		align-content: center;
