--- a/src/main/resources/templates/thymeleaf/aicc/Course_update.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_update.html
@@ -6,18 +6,18 @@
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<div class="container">
-	<h4 class="text-center mt-3">코스 상세 보기</h4>
+	<h4 class="text-center my-5">코스 상세 보기</h4>
 		<div class="row mx-0 justify-content-center">
 			<div class="row">
 			<div class="col">
-				<div class="map_mapSection w-100 my-3 ">
+				<div class="map_mapSection w-100 my-5 ">
 				<!-- 지도를 표시할 div 입니다 -->
 				<div id="map" style="height: 300px"
 						class=" mx-auto rounded-4 w-100"></div>
 			</div>
 			</div>
 			</div>
-			<div class="row mx-auto mx-0 px-0 bg-mainbg p-2 my-4">
+			<div class="row mx-auto mx-0 px-0 bg-mainbg p-2 my-5">
 				<div class="col-12 px-0 mx-0">
 					<div class="row courseListRow px-0 mx-0 bg-white p-3 ">
 						<div class="col-12 col-md-2 mx-auto text-truncate px-0 mx-0 text-center">
@@ -52,17 +52,6 @@
 						</div>
 						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
 							<a
-								th:href="@{'Event_view?id='+ ${aiccFood2.get(0).getEvent_num()}}">
-								<img
-								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
-								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
-								<span th:text="${aiccFood2.get(0).getEvent_name()}"
-									class="text-center mt-3 "></span>
-							</a>
-						</div>
-						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
-							<a
 								th:href="@{'Event_view?id='+ ${aiccCafe.get(0).getEvent_num()}}">
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
@@ -70,6 +59,17 @@
 								style="width: 100px; height: 100px;">
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 mx-auto  text-truncate px-0 mx-0 text-center">
+							<a
+								th:href="@{'Event_view?id='+ ${aiccFood2.get(0).getEvent_num()}}">
+								<img
+								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
+								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
+								style="width: 100px; height: 100px;">
+								<span th:text="${aiccFood2.get(0).getEvent_name()}"
+									class="text-center mt-3 "></span>
 							</a>
 						</div>
 					</div>
