--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -6,7 +6,7 @@
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<div class="container">
-	<h4 class="text-center mt-3">코스 저장하기</h4>
+	<h4 class="text-center my-5">코스 저장하기</h4>
 		<div class="row mx-0 justify-content-center">
 			<div class="row">
 			<div class="col">
@@ -17,7 +17,7 @@
 			</div>
 			</div>
 			</div>
-			<div class="row mx-auto mx-0 px-0 bg-mainbg p-2 my-4">
+			<div class="row mx-auto mx-0 px-0 bg-mainbg p-2 my-5">
 				<div class="col-12 px-0 mx-0">
 					<div class="row courseListRow px-0 mx-0 bg-white p-3 ">
 						<div class="col-12 col-md-2 mx-auto text-truncate px-0 mx-0 text-center">
@@ -128,6 +128,7 @@
 					<input type="hidden" class="totalDistanceValue" value="" name="cours6"/>
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 					<input type="hidden" name="day" th:value="${day}" />
+					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
 					<div class="col-12 mx-auto mt-4 text-end">
 						<button type="submit" class="btn btn-main "> 코스 등록</button>
 					</div>
